# simple-stock-management

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: django_ci.yml
accounts/: admin.py  forms.py
accounts/migrations/: 0001_initial.py
app/: settings.py
app/accounts/: admin.py  forms.py  models.py
app/products/: admin.py  models.py
app/products/migrations/: 0001_initial.py  0002_alter_category_description_alter_category_name_and_more.py  0003_product_final_price.py  0004_product_discount.py  0005_alter_category_options.py  0006_alter_category_options_alter_product_options_and_more.py
tests/: conftest.py  factories.py
tests/accounts/: test_user.py
tests/products/: test_api_products.py  test_category.py  test_products.py
