[tool.poetry]
name = "simple-stock-management"
version = "0.1.0"
description = "Building an API for stock management"
authors = ["AlekysCoelho <alekyscoelho@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.4"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-django = "^4.9.0"
pytest-cov = "^6.0.0"

[pytest]
DJANGO_SETTINGS_MODULE = "app.settings"
python_files = ["tests*.py", "*_tests.py"]

[tool.coverage.run]
omit = [
    "*/migrations/*",
    "*/migrations/*.*"
]

[tool.coverage.report]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
